# TriageBot

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  virtual_triage.db
scripts/: ollama-entrypoint.sh  test_llm.py
src/: llm.py  logging_config.py  main.py
src/agents/: agent_utils.py  risk_assessment_agent.py  routing_agent.py  symptom_intake_agent.py
src/api/endpoints/: auth.py  triage.py
src/auth/: security.py
src/db/: models.py  session.py
tests/integration/: test_api.py
tests/unit/: test_agents.py
